--- a/package.xml
+++ b/package.xml
@@ -53,6 +53,7 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>libjsoncpp-dev</depend>
+  <depend>tf2</depend>
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
 
