--- a/package.xml
+++ b/package.xml
@@ -50,6 +50,7 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
+  <depend>dynamic_reconfigure</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>libjsoncpp-dev</depend>
