feat: add missing features

--- a/cfg/DVLConfig.cfg
+++ b/cfg/DVLConfig.cfg
@@ -7,6 +7,6 @@ gen = ParameterGenerator()
 
 gen.add("speed_of_sound",               int_t,   0, "Speed of sound",            1500,  1400, 1600)
 gen.add("mounting_rotation_offset",     int_t,   0, "Mounting Rotation Offset",  0,  0, 360)
-gen.add("acoustics_enabled",            bool_t,     0, "Acoustics Enabled",         False)
+gen.add("acoustic_enabled",            bool_t,     0, "Acoustic Enabled",         False)
 
 exit(gen.generate(PACKAGE, PACKAGE, "DVL"))
