--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,6 @@ zsdoc/data
 !/tests/_output/.gitkeep
 
 # End of https://www.toptal.com/developers/gitignore/api/clion,linux,vim,ros,ros2,cmake,zsh
+
+
+docs/_build
