--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/setup-python@v4
       with:
-        python-version: 3.7
+        python-version: 3.8
 
     - uses: actions/checkout@master
       with:
@@ -22,6 +22,8 @@ jobs:
 
     - name: Build and Commit
       uses: sphinx-notes/pages@v2
+      with:
+        requirements_path: docs/requirements.txt
 
     - name: Push changes
       uses: ad-m/github-push-action@master
