--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,13 +15,8 @@ jobs:
       with:
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r docs/requirements.txt
-
     - name: Build and Commit
-      uses: incebellipipo/shpinx-pages@v2
+      uses: sphinx-notes/pages@v2
       with:
         requirements_path: docs/requirements.txt
 
