--- a/cfg/DVLConfig.cfg
+++ b/cfg/DVLConfig.cfg
@@ -5,8 +5,9 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("speed_of_sound",               int_t,   0, "Speed of sound",            1500,  1400, 1600)
-gen.add("mounting_rotation_offset",     int_t,   0, "Mounting Rotation Offset",  0,  0, 360)
-gen.add("acoustic_enabled",            bool_t,     0, "Acoustic Enabled",         False)
+gen.add("speed_of_sound",            int_t,   0,   "Speed of sound",            1500,  1400, 1600)
+gen.add("mounting_rotation_offset",  int_t,   0,   "Mounting Rotation Offset",  0,  0, 360)
+gen.add("acoustic_enabled",          bool_t,  0,   "Acoustic Enabled",          False)
+gen.add("range_mode",                str_t,   0,   "Range Mode",                "auto")
 
 exit(gen.generate(PACKAGE, PACKAGE, "DVL"))
