--- a/cfg/DVLConfig.cfg
+++ b/cfg/DVLConfig.cfg
@@ -9,5 +9,6 @@ gen.add("speed_of_sound",            int_t,   0,   "Speed of sound",            
 gen.add("mounting_rotation_offset",  int_t,   0,   "Mounting Rotation Offset",  0,  0, 360)
 gen.add("acoustic_enabled",          bool_t,  0,   "Acoustic Enabled",          False)
 gen.add("range_mode",                str_t,   0,   "Range Mode",                "auto")
+gen.add("periodic_cycling_enabled",  bool_t,  0,   "Periodic Cycling Enabled",  True)
 
 exit(gen.generate(PACKAGE, PACKAGE, "DVL"))
